CHANGELOG

21/08/2017
* Improved shop management.
* Improved Point of Sales
* Added maintenance logs.
* Minor UI and admin side changes.
* Improved production tracking.
* Added responsive datatables.

22/08/2017
* Minor UI changes.
* Added delivery tracking.
* Improved transactions UI.

23/08/2017
* Improved maintenance validation.
* Minor UI changes.

24/08/2017
* Added archives on all maintenance.
* Improved sidebar menu.

25/08/2017
* Major UI changes.

26/08/2017
* Fixed archives.
* Minor UI changes.

27/08/2017
* Improved utilities.
* Improved delivery tracking.

September 1, 2017 12:11pm
update by josefpls
*four new folders in plugins (fabrics, frameworks, products, logo).
*every image uploaded will be moved to its respective folders. 