@@ -36,3 +36,8 @@ September 1, 2017 12:11pm
 update by josefpls
 *four new folders in plugins (fabrics, frameworks, products, logo).
 *every image uploaded will be moved to its respective folders. 
+
+September 1, 2017 1:14pm
+update by josefpls
+*promos folder added to the previous update.
+*website pics aligned with the new file organization.
